--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -4,201 +4,165 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Installation
 
-- Install library
+- To install our library, you can use npm or yarn package manager.
 
   ```bash
-  # With npm
+  # using npm
+
   npm install @dank-style/react
 
-  # With yarn
+  # using yarn
+
   yarn add @dank-style/react
   ```
 
-- Import
-  ```jsx
-  import { styled } from '@dank-style/react';
-  ```
-- Usage
+Once the library is installed, you can import it in your project by using the following line of code.
 
-  ```jsx
-  import { StyledProvider, styled } from '@dank-style/react';
+```jsx
+import { styled, StyledProvider } from 'dank-style';
+```
 
-  const StyledView = styled(
-    View,
-    {
-      baseStyle: {
-        style: {
-          bg: '$red500',
-          p: '$3',
-        },
-      },
-    },
-    {}
-  );
+To configure `dank`, you will need to create a `dank.config.js` file (.js works too) in the root of your project. In this config file, you can define your theme tokens, breakpoints, and any other settings that you want to use throughout your application. Once your config file is set up, you can import it and pass it as a prop to the `StyledProvider` component, which should be wrapped around your entire application. This will make the configuration options available to all components using the styled function.
 
-  const App = () => (
-    <StyledProvider>
-      <StyledView />
-    </StyledProvider>
-  );
-  ```
+For example, in dank.config.js:
 
-- Configuring config file
-
-  - create a dank.config.ts
-
-  ```jsx
-  //dank.config.ts
-
-  export const config = {
+```jsx
+export const config = {
     aliases: {
       bg: 'backgroundColor',
-      backgroundColor: 'backgroundColor',
-      bgColor: 'backgroundColor',
-      color: 'color',
-      // dimension
-      h: 'height',
-      w: 'width',
-      height: 'height',
-      width: 'width',
-
-      // Media Query
-      condition: 'condition',
+      backgroundColor: 'backgroundColor'
     },
 
     tokens: {
       colors: {
         primary0: '#ffffff',
-        primary50: '#faf5ff',
-        primary100: '#f3e8ff',
-        primary200: '#e9d5ff',
-        primary300: '#d8b4fe',
         primary400: '#c084fc',
         primary500: '#a855f7',
         primary600: '#9333ea',
-        primary700: '#7e22ce',
-        primary800: '#6b21a8',
-        primary900: '#581c87',
-        primary950: '#3A0D5E',
       },
       space: {
-        'px': '1px',
-        '0': 0,
-        '0.5': 2,
-        '1': 4,
-        '1.5': 6,
-        '2': 8,
-        '2.5': 10,
-        '3': 12,
-        '3.5': 14,
         '4': 16,
         '5': 20,
         '6': 24,
-        '7': 28,
-        '8': 32,
-        '1/2': '50%',
-        '1/3': '33.333%',
-        '2/3': '66.666%',
-        '1/4': '25%',
-        '2/4': '50%',
-        '3/4': '75%',
-        '1/5': '20%',
-        '2/5': '40%',
-        '3/5': '60%',
-        '4/5': '80%',
-        '1/6': '16.666%',
-        '2/6': '33.333%',
-        '3/6': '50%',
-        '4/6': '66.666%',
-        '5/6': '83.333%',
-        'full': '100%',
+
       },
       borderWidths: {
-        '0': 0,
-        '1': '1px',
-        '2': '2px',
-        '4': '4px',
-        '8': '8px',
+
       },
       radii: {
-        'none': 0,
-        'xs': 2,
         'sm': 4,
         'md': 6,
-        'lg': 8,
-        'xl': 12,
-        '2xl': 16,
-        '3xl': 24,
-        'full': 9999,
+
       },
       letterSpacings: {
-        'xs': '-0.05em',
-        'sm': '-0.025em',
+
         'md': 0,
-        'lg': '0.025em',
-        'xl': '0.05em',
-        '2xl': '0.1em',
+
       },
       lineHeights: {
-        '2xs': '1em',
-        'xs': '1.125em',
+
         'sm': '1.25em',
         'md': '1.375em',
-        'lg': '1.5em',
-        'xl': '1.75em',
-        '2xl': '2em',
-        '3xl': '2.5em',
-        '4xl': '3em',
-        '5xl': '4em',
+
       },
       fontWeights: {
-        hairline: '100',
-        thin: '200',
-        light: '300',
+
         normal: '400',
         medium: '500',
-        semibold: '600',
-        bold: '700',
-        extrabold: '800',
-        black: '900',
-        extraBlack: '950',
+
       },
       fonts: {
-        heading: undefined,
-        body: undefined,
-        mono: undefined,
-        // body400:
+
       },
       fontSizes: {
-        '2xs': 10,
-        'xs': 12,
         'sm': 14,
         'md': 16,
-        'lg': 18,
-        'xl': 20,
-        '2xl': 24,
-        '3xl': 30,
-        '4xl': 36,
-        '5xl': 48,
-        '6xl': 60,
-        '7xl': 72,
-        '8xl': 96,
-        '9xl': 128,
       },
   		mediaQueries: {
   	    'sm': '@media (min-width: 480px)',
   	    'md': '@media (min-width: 768px)',
-  	    'lg': '@media (min-width: 992px)',
-  	    'xl': '@media (min-width: 1280px)',
-  	    '2xl': '@media (min-width: 1536px)',
+
   	  },
     },
   } as const;
 
-  ```
+```
 
-- Import this config file and pass it to StyledProvider
+Then, in your application's entry point, you can import the config file and pass it as a prop to the StyledProvider component, which should be a parent component to all your other components:
 
 ```jsx
-<StyledProvider config={config}>...</StyledProvider>
+import React from 'react';
+import { StyledProvider } from 'dank-styled-components';
+import tokens from './dank.config';
+
+const App = () => {
+  return (
+    <StyledProvider tokens={tokens}>
+      {/* Other components here */}
+    </StyledProvider>
+  );
+};
+
+export default App;
+```
+
+You will also need to add the babel plugin to your project if you want to perform all style calculations during build time. The plugin can be installed via npm or yarn and should be added to your babel config.
+
+```base
+  npm install --save-dev babel-plugin-styled-components-optimizations
+
+```
+
+or
+
+```base
+  yarn add --dev babel-plugin-styled-components-optimizations
+
+```
+
+```jsx
+// babel.config.js
+module.exports = {
+  plugins: ['styled-components-optimizations'],
+};
+```
+
+## Sever-side rendering
+
+It's also recommended to set up your server-side rendering (SSR) correctly. To do this, you will need to use the flush() function exported by the library and call it in your \_document.js file.
+
+```jsx
+import { flush } from 'dank-style';
+
+class MyDocument extends Document {
+  static getInitialProps({ renderPage }) {
+    const sheet = new ServerStyleSheet();
+    const page = renderPage(
+      (App) => (props) => sheet.collectStyles(<App {...props} />)
+    );
+    const styleTags = sheet.getStyleElement();
+    const styles = flush();
+    return { ...page, styleTags, styles };
+  }
+  render() {
+    return (
+      <html>
+        <Head>
+          {this.props.styleTags}
+          <style id="server-styles">{this.props.styles}</style>
+        </Head>
+        <body>
+          <Main />
+          <NextScript />
+        </body>
+      </html>
+    );
+  }
+}
+```
+
+Once you've completed these steps, you can start using the styled function to create styled components and take advantage of the library's features.
+
+```
+
 ```
